--- a/pages/shop/item.html
+++ b/pages/shop/item.html
@@ -1,93 +1,77 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <title>Home - Funkoshop</title>
+    <link rel="stylesheet" href="../../styles/styles.css">
+    <title>Funkoshop</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar container">
             <picture class="navbar__logo">
-                <a href="./index.html">
-                    <img class="logo__branding" src="./assets/img/branding/logo_light_horizontal.svg"
-                        alt="Logo Funkoshop">
+                <a href="../../index.html">
+                    <img src="../../assets/img/branding/logo_light_horizontal.svg" alt="Logo Funkoshop">
                 </a>
             </picture>
             <ul class="navbar__menu">
                 <li class="navbar__item with-submenu"><a class="navbar__link with-icon"
-                        href="./pages/shop/shop.html">SHOP<iconify-icon icon="tabler:chevron-down"></iconify-icon></a>
+                        href="./shop.html">SHOP<iconify-icon icon="tabler:chevron-down"></iconify-icon></a>
                     <ul class="submenu">
                         <li class="submenu__item"><a href="" class="submenu__link">Funkos</a></li>
                         <li class="submenu__item"><a href="" class="submenu__link">Remeras</a></li>
                         <li class="submenu__item"><a href="" class="submenu__link">Llaveros</a></li>
                     </ul>
                 </li>
-                <li class="navbar__item"><a class="navbar__link" href="./contacto.html">CONTACTO</a></li>
-                <li class="navbar__item"><a class="navbar__link" href="./pages/admin/login.html">LOGIN</a></li>
-                <li class="navbar__item"><a class="navbar__cart" href="./pages/shop/cart.html"><img
-                            src="./assets/img/icons/cart-icon.svg" alt=""></a></li>
+                <li class="navbar__item"><a class="navbar__link" href="../../contacto.html">CONTACTO</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="../admin/login.html">LOGIN</a></li>
+                <li class="navbar__item"><a class="navbar__cart" href="./cart.html"><img
+                            src="../../assets/img/icons/cart-icon.svg" alt=""></a></li>
             </ul>
         </nav>
-
     </header>
-    <section class="hero">
-        <article class="hero__content container">
-            <h3 class="hero__title">Nuevos Ingresos</h3>
-            <p class="hero__text">Descubrí el próximo Funko Pop de tu colección</p>
-            <a class="hero__link" href="./pages/shop/shop.html">SHOP</a>
-        </article>
-    </section>
-    <main class="container">
-        <section class="row collection">
-            <article class="col-md-6 collection__content">
-                <h3 class="collection__title">STAR WARS & THE MANDALORIAN</h3>
-                <p class="collection__text">Disfrutá de una saga que sigue<br>agregando personajes a su colección.</p>
-                <hr class="collection__hr" width="100%">
-                <a class=" collection__link" href="./pages/shop/shop.html">ver colección</a>
+    <main class="main-container">
+        <section class="items container">
+            <article class="row items__content card-item">
+                <picture class="col-md-6 item__img card-item__cover">
+                    <img class="card-item__img--front" src="../../assets/img/star-wars/baby-yoda-1.webp"
+                        alt="Baby Yoda">
+                    <img class="card-item__img--back" src="../../assets/img/star-wars/baby-yoda-box.webp"
+                        alt="Baby Yoda Box">
+                </picture>
+
+                <div class="col-md-6 items__details">
+                    <p class="items_licence">STAR WARS</p>
+                    <h3 class="items__name">BABY YODA BLUEBALL</h3>
+                    <p class="items__text">Figura coleccionable de Baby Yoda (Grogu) - The Mandalorian Saga,
+                        edición limitada.</p>
+                    <p class="items__price">$1799,99.-</p>
+                    <div class="items__cart">
+                        <input class="items__input" type="text" name="quantity" id="quantity" placeholder="0">
+                        <div class="items__cart--btn">
+                            <button id="add" class="items__cart--mas">+</button>
+                            <button id="substract" class="items__cart--menos">-</button>
+                        </div>
+                        <button type="submit" class="items__addcart">Agregar al carrito</button>
+                    </div>
+                    <p class="items__promo"><a href="#">Ver metodos de pago </a> - 3 CUOTAS SIN INTERÉS</p>
+                </div>
             </article>
-            <picture class="col-md-6 collection__cover">
-                <img src="./assets/img/star-wars/baby-yoda-1.webp" alt="">
-            </picture>
         </section>
-        <section class="row collection">
-            <article class="col-md-6 collection__content">
-                <h3 class="collection__title">POKEMON INDIGO</h3>
-                <p class="collection__text">Atrapa todos los que puedas y disfruta<br>de una colección llena de amigos.
-                </p>
-                <hr class="collection__hr" width="100%">
-                <a class="collection__link" href="./pages/shop/shop.html">ver colección</a>
-            </article>
-            <picture class="col-md-6 collection__cover">
-                <img src="./assets/img/pokemon/vulpix-1.webp" alt="">
-            </picture>
-        </section>
-        <section class="row collection">
-            <article class="col-md-6 collection__content">
-                <h3 class="collection__title">HARRY POTTER</h3>
-                <p class="collection__text">Revive los recuerdos de una saga llena<br>de magia y encanto</p>
-                <hr class="collection__hr" width="100%">
-                <a class="collection__link" href="./pages/shop/shop.html">ver colección</a>
-            </article>
-            <picture class="col-md-6 collection__cover">
-                <img src="./assets/img/harry-potter/snape-patronus-1.webp" alt="">
-            </picture>
-        </section>
-        <section class="glide slider">
-            <h2 class="slider__title">Últimos lanzamientos</h2>
+        <section class="slider container glide">
+            <h2 class="slider__title">Productos relacionados</h2>
             <div class="glide__track" data-glide-el="track">
                 <ul class="slider__items glide__slides">
                     <li class="slider__item glide__slides">
                         <article class="card-item">
                             <a class="card-item__link" href="">
                                 <picture class="card-item__cover">
-                                    <img class="card-item__img--front" src="./assets/img/star-wars/trooper-1.webp"
+                                    <img class="card-item__img--front" src="../../assets/img/star-wars/trooper-1.webp"
                                         alt="Tropper">
-                                    <img class="card-item__img--back" src="./assets/img/star-wars/trooper-box.webp"
+                                    <img class="card-item__img--back" src="../../assets/img/star-wars/trooper-box.webp"
                                         alt="Trooper Box">
                                     <span class="card-item__tag">NUEVO</span>
                                 </picture>
@@ -104,9 +88,9 @@
                         <article class="card-item">
                             <a class="card-item__link" href="">
                                 <picture class="card-item__cover">
-                                    <img class="card-item__img--front" src="./assets/img/pokemon/pidgeotto-1.webp"
+                                    <img class="card-item__img--front" src="../../assets/img/pokemon/pidgeotto-1.webp"
                                         alt="Pokemon">
-                                    <img class="card-item__img--back" src="./assets/img/pokemon/pidgeotto-box.webp"
+                                    <img class="card-item__img--back" src="../../assets/img/pokemon/pidgeotto-box.webp"
                                         alt="Pokemon Box">
                                     <span class="card-item__tag">NUEVO</span>
                                 </picture>
@@ -123,9 +107,9 @@
                         <article class="card-item">
                             <a class="card-item__link" href="">
                                 <picture class="card-item__cover">
-                                    <img class="card-item__img--front" src="./assets/img/harry-potter/luna-1.webp"
+                                    <img class="card-item__img--front" src="../../assets/img/harry-potter/luna-1.webp"
                                         alt="Luna">
-                                    <img class="card-item__img--back" src="./assets/img/harry-potter/luna-box.webp"
+                                    <img class="card-item__img--back" src="../../assets/img/harry-potter/luna-box.webp"
                                         alt="Luna Box">
                                     <span class="card-item__tag">NUEVO</span>
                                 </picture>
@@ -151,21 +135,24 @@
     <footer class="footer">
         <nav class="navbar container">
             <ul class="navbar__item">
-                <li class="navbar__item"><a class="navbar__link" href="./pages/shop/shop.html">SHOP</a></li>
-                <li class="navbar__item"><a class="navbar__link" href="./pages/admin/login.html">INGRESAR</a></li>
-                <li class="navbar__item"><a class="navbar__link" href="contacto.html">CONTACTO</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="./shop.html">SHOP</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="../admin/login.html">INGRESAR</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="../../contacto.html">CONTACTO</a></li>
             </ul>
             <picture>
-                <a href="./index.html">
-                    <img class="logo__branding" src="./assets/img/branding/isotype.svg" alt="">
+                <a href="../../index.html">
+                    <img src="../../assets/img/branding/isotype.svg" alt="">
                 </a>
             </picture>
         </nav>
         <p class="footer__copy">All rights reserved 2023 - Funkoshop &copy</p>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <script src="../../scripts/items.js"></script>
 
     <script>
         new Glide('.glide',
